(lang dune 3.16)

(name tcpb)

(generate_opam_files true)

(source
 (github https://github.com/kubrack/tcpb.git))

(authors "kubrack@gmail.com")

(maintainers "kubrack@gmail.com")

(license BSD)

(documentation https://github.com/kubrack/tcpb.git)

(package
 (name tcpb)
 (synopsis "")
 (description "")
 (depends ocaml dune)
 (tags
  (topics "ocaml" "tcp" "Lwt")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
